# tmc2-rs

./: .gitignore  Cargo.toml  README.md
src/: bitstream.rs  codec.rs  common.rs  decoder.rs  lib.rs  writer.rs
src/bitstream/: reader.rs
src/common/: context.rs
