[package]
name = "tmc2rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tmc2rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
log = "0.4.17"
env_logger = { version = "0.10.0", default-features=false }
rayon = "1.6.0"
ffmpeg-next = { version = "4.4.0", default-features=false, features=["codec", "format"] }
tempfile = "3.3.0"
cgmath = "0.18.0"
fast-math = "0.1.1"
num_enum = "0.5.7"
crossbeam-channel = "0.5.6"

[[bin]]
name = "decoder"

[profile.release]
debug = true
